<resources>
    <string name="app_name">景深辅助工具</string>
    <string name="hint_device_add">添加摄影设备</string>
    <string name="hint_device_select">选择摄影设备</string>
    <string name="label_device">设备</string>
    <string name="hint_camera_name">相机名</string>
    <string name="tv_sensor_size">传感器尺寸</string>
    <string name="tv_sensor_pixel_count">传感器像素数量</string>
    <string name="hint_lens_name">镜头名</string>
    <string name="hint_lens_max_focal">最大焦距</string>
    <string name="hint_lens_min_focal">最小焦距</string>

    <string name="contact_email">fly_in_wind@qq.com</string>
    <string name="contact_studio">oko studio</string>
    <string name="cn_contact_writer">联系作者</string>
    <string name="cn_share_app">分享应用</string>

    <string name="navigation_drawer_open">打开导航绘图</string>
    <string name="navigation_drawer_close">关闭导航绘图</string>

    <string name="setting_check_version">检查更新</string>

    <string name="cn_setting">设定</string>
    <string name="cn_help">帮助</string>
    <string name="cn_feedback">反馈</string>

    <string name="cn_accept">确认</string>
    <string name="cn_cancel">放弃</string>
    <string name="cn_save">保存</string>

    <string name="warn">警告</string>
    <string name="error_need_device_id">需要设备数据ID</string>
    <string name="error_need_device_name">请输入设备名</string>

    <string name="error_need_camera_name">请输入相机名</string>
    <string name="error_need_camera_sensor_size">相机传感器尺寸</string>
    <string name="error_need_camera_sensor_pixel_count">相机传感器像素数</string>

    <string name="error_need_lens_name">请输入镜头名</string>
    <string name="error_need_min_focal">镜头最小焦距</string>
    <string name="error_need_max_focal">镜头最大焦距</string>
    <string name="error_focal_range_mess">镜头最大焦距小于最小焦距</string>
    <string name="hint_device_name">设备名</string>

    <string name="hint_sure">确定</string>
    <string name="hint_delete">删除</string>
    <string name="hint_edit">修改</string>

    <string name="label_calculator">计算</string>
    <string name="tv_lens_focal">焦距</string>
    <string name="tv_lens_aperture">光圈</string>
    <string name="tv_object_distance">物距</string>

    <string name="tag_front_point">近点</string>
    <string name="tag_object_distance">物距</string>
    <string name="tag_object">物体</string>
    <string name="tag_back_point">远点</string>
    <string name="bt_change_object_distance">调整范围</string>
    <string name="hint_object_distance_min">物距最小值(单位m)</string>
    <string name="hint_object_distance_max">物距最大值(单位m)</string>

    <string name="error">错误</string>

    <string name="sure">确认</string>
    <string name="bt_change_object_distance_step">修改物距调步值</string>
    <string name="tag_od_meter">步值米</string>
    <string name="tag_od_decimeter">步值分米</string>

    <string name="tag_decimeter">分米</string>
    <string name="tag_meter">米</string>

    <string name="cn_usr_message">请输入您的意见或建议</string>

    <!-- for send message -->
    <string name="url_post_send_message">
        http://www.wxmandriodapp.com:8080/KeepAccountServer/def/UMUtility
    </string>
    <string name="col_usr">usr</string>
    <string name="col_message">message</string>
    <string name="col_app_name">app_name</string>
    <string name="col_val_app_name">DOFCalculator</string>
    <string name="label_start_page">景深辅助工具</string>
    <string name="cn_other">其它</string>
    <string name="label_setting">设定</string>
    <string name="hint_usr_message">建议/意见</string>
    <string name="label_help">帮助</string>
</resources>
